--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,4 +33,26 @@ jobs:
         with:
           name: s3-packaged.yaml
           path: src/s3/packaged.yaml
+  publish:
+    name: Publish
+    #if: ${{ github.event_name == 'pull_request' && github.event.pull_request.merged == true }}
+    env:
+      AWS_SERVERLESS_BUCKET: coralogix-serverless-repo
+    #needs: [infrastructure, check, build]
+    strategy:
+      matrix:
+        package: ${{ fromJSON(needs.check.outputs.packages) }}
+    steps:
+      - name: Download
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ matrix.package }}-packaged.yaml
 
+      - name: Publish
+        run: sam publish --template packaged.yaml
+
+      #- name: Store
+      #  run: |
+      #    aws s3 cp \
+      #      $(yq -r '.Resources | to_entries | .[] | select(.key == "LambdaLayer" or .key == "LambdaFunction") | .value.Properties | to_entries | .[] | select(.key == "ContentUri" or .key == "CodeUri") | .value' packaged.yaml) \
+      #      s3://${{ env.AWS_SERVERLESS_BUCKET }}-${{ env.AWS_DEFAULT_REGION }}/${{ matrix.package }}.zip
