--- a/src/s3/template.yaml
+++ b/src/s3/template.yaml
@@ -5,7 +5,7 @@ Metadata:
   AWS::ServerlessRepo::Application:
     Name: Coralogix-S3
     Description: Send logs from S3 bucket to Coralogix.
-    Author: Coralogix
+    Author: juancho
     SpdxLicenseId: Apache-2.0
     LicenseUrl: LICENSE
     ReadmeUrl: README.md
